--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/coviddb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto = create
 server.port=8080
